@@ -329,8 +329,8 @@ public class SinglePointCrossoverTest {
     /** Evaluate() method */
     @Override
     public BinarySolution evaluate(BinarySolution solution) {
-      solution.setObjective(0, 0);
-      solution.setObjective(1, 1);
+      solution.objectives()[0] = 0;
+      solution.objectives()[1] = 1;
 
       return solution ;
     }
@@ -342,8 +342,8 @@ public class SinglePointCrossoverTest {
 		double crossoverProbability = 1.0;
 
 		List<BinarySolution> parentSolutions = new LinkedList<>();
-		parentSolutions.add(new DefaultBinarySolution(Arrays.asList(2), 2));
-		parentSolutions.add(new DefaultBinarySolution(Arrays.asList(2), 2));
+		parentSolutions.add(new DefaultBinarySolution(List.of(2), 2));
+		parentSolutions.add(new DefaultBinarySolution(List.of(2), 2));
 
 		// Check configuration leads to use default generator by default
 		final int[] defaultUses = { 0 };
